--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,19 +3,22 @@
     "editor.formatOnSave": true,
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
-    "files.trimTrailingWhitespace": true,
-    "files.insertFinalNewline": true,
-    "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
-    "javascript.implicitProjectConfig.experimentalDecorators": true,
-    "javascript.validate.enable": false,
-    "typescript.validate.enable": true,
-    "eslint.autoFixOnSave": true,
+    "editor.codeActionsOnSave": {
+        "source.fixAll": true
+    },
+    "eslint.codeActionsOnSave.mode": "problems",
     "eslint.validate": [
         "javascript",
         "javascriptreact",
-        { "language": "typescript", "autoFix": true },
-        { "language": "typescriptreact", "autoFix": true }
+        "typescript",
+        "typescriptreact"
     ],
+    "files.trimTrailingWhitespace": true,
+    "files.insertFinalNewline": true,
+    "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
+    "js/ts.implicitProjectConfig.experimentalDecorators": true,
+    "javascript.validate.enable": false,
+    "typescript.validate.enable": true,
     "[json]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
