--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "boilerplate-server",
-    "version": "0.1.0",
+    "type": "module",
+    "version": "0.2.0",
     "description": "服务器项目模板",
-    "main": "./dist/run.js",
+    "main": "./dist/main.cjs",
     "repository": "https://github.com/cmux/boilerplate-server",
     "author": {
         "name": "Diablohu",
@@ -12,37 +13,39 @@
     "license": "UNLICENSED",
     "private": true,
     "scripts": {
-        "start": "yarn run build && node ./dist/run.js",
+        "start": "npm run build && node ./dist/main.cjs",
         "build": "webpack",
         "dev": "cross-env WEBPACK_BUILD_ENV=dev webpack",
-        "test": "jest __tests__/"
+        "test": "jest __tests__/",
+        "up": "npx ncu -i"
     },
     "bugs": {
         "url": "https://github.com/cmux/boilerplate-server/issues"
     },
     "homepage": "https://github.com/cmux/boilerplate-server",
     "engines": {
-        "node": ">=10.0.0"
+        "node": ">=16.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.6.0",
-        "@babel/preset-typescript": "^7.6.0",
-        "babel-loader": "^8.0.6",
-        "clean-webpack-plugin": "^3.0.0",
-        "cross-env": "^6.0.0",
-        "eslint": "^6.4.0",
-        "eslint-config-koot": "^1.4.0",
-        "forever": "^1.0.0",
-        "forever-monitor": "^1.7.1",
-        "husky": "^3.0.5",
-        "jest": "^24.9.0",
-        "lint-staged": "^9.2.5",
-        "prettier": "^1.18.2",
-        "prettier-eslint": "^9.0.0",
-        "react": "^16.9.0",
-        "thread-loader": "^2.1.3",
-        "webpack": "^4.40.2",
-        "webpack-cli": "^3.3.9"
+        "@babel/core": "^7.20.7",
+        "@babel/preset-typescript": "^7.18.6",
+        "@types/koa": "^2.13.5",
+        "babel-loader": "^9.1.0",
+        "clean-webpack-plugin": "^4.0.0",
+        "cross-env": "^7.0.3",
+        "debug": "^4.3.4",
+        "eslint": "^8.30.0",
+        "eslint-config-koot": "^4.0.0",
+        "husky": "^8.0.2",
+        "jest": "^29.3.1",
+        "koa": "^2.14.1",
+        "lint-staged": "^13.1.0",
+        "prettier": "^2.8.1",
+        "prettier-eslint": "^15.0.1",
+        "react": "^18.2.0",
+        "thread-loader": "^3.0.4",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1"
     },
     "husky": {
         "hooks": {
